few changes (lib card color corrections, basic-scrollbar)

--- a/kifi-backend/modules/shoebox/angular/src/layout/nav/navLibs.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/nav/navLibs.styl
@@ -41,3 +41,8 @@
   display: inline-block
   vertical-align: top
   background-repeat: no-repeat
+
+.kf-scrollable-libs
+  height: 350px
+  overflow: auto
+
